resolve elements relative to META-INF root instead of .jar files